// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth form renders login page 1`] = `
<div>
  <form
    class="flex flex-col items-center w-3/4 space-y-5"
  >
    <input
      aria-label="email"
      autocomplete="username"
      class="p-2 rounded-md"
      name="email"
      placeholder="email"
      type="email"
      value=""
    />
    <input
      aria-label="password"
      autocomplete="current-password"
      class="p-2 rounded-md"
      name="password"
      placeholder="password"
      type="password"
      value=""
    />
    
    <button
      class="bg-teal text-white w-1/2 p-2 rounded-md"
    >
      Log In
    </button>
  </form>
</div>
`;

exports[`auth form renders register page 1`] = `
<div>
  <form
    class="flex flex-col items-center w-3/4 space-y-5"
  >
    <input
      aria-label="email"
      autocomplete="username"
      class="p-2 rounded-md"
      name="email"
      placeholder="email"
      type="email"
      value=""
    />
    <input
      aria-label="password"
      autocomplete="current-password"
      class="p-2 rounded-md"
      name="password"
      placeholder="password"
      type="password"
      value=""
    />
    
    <button
      class="bg-teal text-white w-1/2 p-2 rounded-md"
    >
      Register
    </button>
  </form>
</div>
`;
